Added fifo pipe for data flow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ file.output-path=./Users/swarupbhol/Desktop/output.json
 
 kafka.bootstrap-servers=localhost:9092
 kafka.topic-name=my-json-topic
+app.pipe-path: "/tmp/json_pipe"
